Cleaned up Runtime File Checks; correct hash array sizes, throw on uncaught exception
Changed Microsoft.DirectX.Direct3DX.dll to version 1.0.2911.0
Added HeightFieldDescription.VerticalExtent
Fixed bug in SceneDescription.MaximumBounds setter
Changed PhysX.Net to target PhysX 2.8.1.21 (January 2009)
Fixed PhysicsStream Finalizer. Was calling itself.
Worked on serialization
Cleaned up comments

[0.10.2.0 - 2008-11-15]
Fixed bug where Fluid.ParticleWriteData would be empty
Added sample projects to solution
Samples target the RTM version of XNA 3.0 and SlimDX September 2008
Included some unit tests (many more can be written)
Changed onAdd, onRemove to ItemAdded, ItemRemoved
Changed ParticleData, FluidPacketData to take pointers instead of values in their constructors - this fixes up Fluid.ParticleWriteData being empty (among others)
Fixed random crash on exit when a controller had been created. Crash caused by shape being disposed by controller, then attempting to be released by Shape on GC

[0.10.0.0 - 2008-08-24]
Changed to PhysX SDK 2.8.1 - Check the official change log
Removed the 'Base' prefix from abstract class names, no need for it, conforms to .Net naming and PhysX naming better
Added Timing to Compartment
Added checks for null and disposed parameters to lots of functions
Removed FluidDescriptionBase.SetInitialParticleData and FluidDescriptionBase.SetParticleWriteData.
Added FluidDescriptionBase.ParticleDeletionIdWriteData, FluidDescriptionBase.ParticleCreationIdWriteData, FluidDescriptionBase.FluidPacketData
FluidDescriptionBase. { InitialParticleData, ParticleWriteData, ParticleDeletionIdWriteData, ParticleCreationIdWriteData, FluidPacketData } are all created when the constructor is called as per the SDK
Changed AllocateCommonParticleData to an instance call
Slight speed up to FluidEmitter.LoadFromDescription. Fixed FluidEmitter.SaveToDescription not saving the FrameShape